--- a/src/assets/style/components/blocks/_input.scss
+++ b/src/assets/style/components/blocks/_input.scss
@@ -1,8 +1,8 @@
 @import "../../abstract/mixins";
 
 .text-input-block {
+    min-width: 199px;
     input {
-        // background-color: #ccd3cc !important;
         border: 1px solid silver;
         border-radius: 5px;
         padding: 5px 10px;
