--- a/src/assets/style/components/pages/_loggerSearch.scss
+++ b/src/assets/style/components/pages/_loggerSearch.scss
@@ -44,7 +44,9 @@
         td {
             padding: 15px;
             text-align: start;
+            min-width: 212px;
         }
+
         .table-header {
             th {
                 .sort-icon {
@@ -84,12 +86,27 @@
         column-gap: 5px;
         padding: 15px;
         box-shadow: 0px 1px 6px 0px #c0c0c08c;
+        min-width: 1484px;
+
         li {
+            &:first-child {
+                margin-right: 5px;
+                visibility: hidden;
+            }
+            &:last-child {
+                margin-left: 5px;
+                visibility: hidden;
+            }
+            &.showArrow {
+                visibility: visible;
+            }
             a {
-                display: block;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
                 width: 25px;
                 height: 25px;
-                text-align: center;
                 border-radius: 3px;
                 color: gray;
             }
